Remove overeager DCHECK in SnapshotController. The DCHECK is not needed because indeed the state of the controller can be 'kReady' as a result of calling Reset() on it. The scenario can be as following: - snapshot started - page is navigated while snapshot is in progress. This causes immediate Reset() on SnapshotController. - This may or may not cancel snapshot, but ultimately the RecentTabHelper will report that snapshot is completed.   If the Reset() above already happened, the DCHECK will fire. It should not, since   this is normal conditions.

Also updated RecentTabHelper to stop posted tasks related to previous snapshot when page is re-navigated.
Removed chack for IsErrorPage() since it will be done later by checking CanSavePage anyways.

BUG=616570

Review-Url: https://codereview.chromium.org/2030793002
Cr-Commit-Position: refs/heads/master@{#397535}

Former-commit-id: b9c88f7c6eb09ba85ea6fce0316a9f7639fdc40b